correct z-index

--- a/src/sass/components/_modal-window.scss
+++ b/src/sass/components/_modal-window.scss
@@ -1,5 +1,6 @@
 .modal {
   position: absolute;
+  z-index: 30;
   top: 0;
   width: 100vw;
   height: 100vh;
